feat: use current savings data from bloc

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -40,5 +40,11 @@
     "description": "Label for spendings transaction types",
     "type": "text",
     "placeholders": {}
+  },
+  "noDataAvailable": "No data available",
+  "@noDataAvailable": {
+    "description": "Text shown when there is no data available",
+    "type": "text",
+    "placeholders": {}
   }
 }
