--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appBarTitleText": "Theme Potential",
+  "appBarTitleText": "Financial Dashboard",
   "@appBarTitleText": {
     "description": "Text shown on appBar.",
     "type": "text",
